# vyatta-cfg-system

./: Jenkinsfile  Makefile.am  configure.ac
debian/: changelog  clear-system-config.service  config-loaded.target  control  copyright  generate-ssh-banner.service  libvyatta-reboot-reason-perl.install  modem-getty@.service  net.vyatta.eng.cpu.history.service  rules  system-configure.service  system-preconfigure.service  vyatta-cpu-history-daemon.service  vyatta-op-clear-block-device-v1-yang.install  vyatta-op-clear-security-v1-yang.install  vyatta-op-clear-system-ip-icmp-v1-yang.install  vyatta-op-clear-system-ip-v1-yang.install  vyatta-op-clear-system-v1-yang.install  vyatta-op-reboot-v1-yang.install  vyatta-op-reset-system-login-v1-yang.install  vyatta-op-reset-system-v1-yang.install  vyatta-op-show-hardware-cpu-v1-yang.install  vyatta-op-show-hardware-v1-yang.install  vyatta-op-show-host-routing-instance-v1-yang.install  vyatta-op-show-host-v1-yang.install  vyatta-op-show-log-v1-yang.install  vyatta-op-show-platform-v1-yang.install  vyatta-op-show-security-v1-yang.install  vyatta-op-show-system-ip-icmp-v1-yang.install  vyatta-op-show-system-ip-v1-yang.install  vyatta-op-show-system-login-v1-yang.install  vyatta-op-show-system-storage-v1-yang.install  vyatta-op-show-system-v1-yang.install  vyatta-platform-setup.service  vyatta-pre-boot.target  vyatta-system-fru-v1-yang.install  vyatta-system-hardware-cpu-history-v1-yang.install  vyatta-system-iommu-v1-yang.install  vyatta-system-journal-v1-yang.install  vyatta-system-login-v1-yang.install  (+15 more)
doc/: Makefile.am  system_configuration_infrastructure.md  vyatta-config.7.ronn
etc/dbus-1/system.d/: net.vyatta.eng.cpu.history.conf
etc/kbd/config.d/: vyatta
etc/modprobe.d/: dummy.conf  realtek.conf
etc/security/limits.d/: 30-vyatta.conf
etc/serial-getty/ttyS0/: serial-getty.env
etc/sudoers.d/: 0vyatta
etc/sysctl.d/: 30-vyatta-router.conf  99900-vyatta-router.conf
etc/systemd/system.conf.d/: 30-vyatta.conf
etc/update-motd.d/: 00-version
lib/Vyatta/: FeatureConfig.pm  File.pm  PlatformConfig.pm  RebootReason.pm  RestoreIPv6Addr.pm  Syslog.pm  ioctl.pm
lib/Vyatta/Login/: RadiusServer.pm  User.pm
override/serial-getty@.service.d/: override.conf
override/systemd-udevd.service.d/: override.conf
platform/: vyatta-op-reboot-ufi-s9500-30xs.platform  vyatta-system-misc-siad.platform
postconfig.d/: vyatta-bootif-dhcp
preconfig.d/: 0400-bootif-hwaddr  0500-vyatta-config-url  1000-fix_permissions  1000-init-bootfile  5000-ipv6-service-class  5000-package-repository
scripts/: ForwardingClassConfig  check-ipv4-ipv6.pl  check_file_in_config_dir  clear-system-config  ip6_disable_redirects  ipv6-wait-for-dad  restore-ipv6-address.pl  setup-package-repo  show-log-parser  system-configure  system-fault-behavior  system-postconfigure  system-preconfigure  vyatta-block-device  vyatta-change-password  vyatta-clear-block-device-op  vyatta-clear-icmp-rate-limit.py  vyatta-conf-sensors  vyatta-cpu-history-client  vyatta-cpu-history-daemon  vyatta-cpu-summary.pl  vyatta-delete-log-file  vyatta-gettime.pl  vyatta-icmp-rate-limit  vyatta-icmp-rate-limit-state  vyatta-ipv6-conf  vyatta-ipv6-disable  vyatta-monitor  vyatta-monitor-parse.pl  vyatta-op-reboot  vyatta-passwd-sync  vyatta-platform  vyatta-platform-setup  vyatta-postconfig-bootup.script  vyatta-pxe-boot  vyatta-show-block-device  vyatta-show-dmi  vyatta-show-fru  vyatta-show-icmp-rate-limit.py  vyatta-show-licenses.pl  (+11 more)
scripts/netplug/deladdr.d/: rsyslogd
scripts/system/: vyatta_check_domainname.pl  vyatta_create_account  vyatta_sendtrap_daemonstopped  vyatta_syslog_template.pl  vyatta_tally_rpc  vyatta_update_console.pl  vyatta_update_hosts.pl  vyatta_update_login.pl  vyatta_update_resolv.pl  vyatta_update_syslog.pl
scripts/tech-support/: 0951-hardware-sensors
src/: .gitignore
sysconf/: level  netdevice
templates/monitor/log/: node.def
templates/poweroff/: node.def
templates/poweroff/cancel/: node.def
templates/poweroff/now/: node.def
templates/reboot/: node.def
templates/reboot/cancel/: node.def
templates/reboot/now/: node.def
templates/reset/terminal/: node.def
templates/show/history/: node.def
templates/show/license/: node.def
templates/show/poweroff/: node.def
templates/show/reboot/: node.def
templates/show/version/: node.def
tests/: Makefile.am  test_syslog.pl  test_yangop_get_sensor.py  vyatta-pxe-boot.sh
tests/fixture/: ipmitool-sdr-v.txt
tmplscripts/system/domain-name/: configd_update.sh
tmplscripts/system/host-name/: configd_update.sh
tmplscripts/system/name-server/: configd_create.sh  (+3 more)
yang/: vyatta-op-clear-block-device-v1.yang  vyatta-op-clear-system-ip-icmp-v1.yang  vyatta-op-clear-system-ip-v1.yang  vyatta-op-clear-system-v1.yang  vyatta-op-generate-syslog-v1.yang  vyatta-op-reboot-v1.yang  vyatta-op-show-log-auth-v1.yang  vyatta-op-show-log-v1.yang  vyatta-op-show-syslog-v1.yang  vyatta-op-show-system-ip-icmp-v1.yang  vyatta-op-show-system-ip-v1.yang  vyatta-op-show-system-storage-v1.yang  vyatta-system-fru-v1.yang  vyatta-system-login-v1.yang  vyatta-system-misc-v1.yang  vyatta-system-network-routing-instance-v1.yang  vyatta-system-network-v1.yang  vyatta-system-platform-deviation-danos-v1.yang  vyatta-system-reboot-v1.yang  vyatta-system-sensor-v1.yang  vyatta-system-storage-v1.yang  vyatta-system-syslog-routing-instance-v1.yang  vyatta-system-syslog-v1.yang
yang-platform/: vyatta-system-misc-siad-deviations-v1.yang
(+60 files in other folders)
